kubernetes/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mock-project-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: mock-project.quentindev.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mock-project-ui-service
                port:
                  number: 3000
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: mock-project-api-gateway
                port:
                  number: 8080
